--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   curved_navigation_bar: ^1.0.1
   firebase_core: ^1.8.0
   cloud_firestore: ^2.5.4
-  provider: 4.3.3
+  provider: ^6.0.1
 
 
 dev_dependencies:
