--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   provider: ^6.0.1
   flutter_svg: ^0.22.0
   uuid: ^3.0.5
+  google_sign_in: ^5.1.0
+  fluttertoast: ^8.0.7
 
 
 dev_dependencies:
