--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^2.5.4
   google_sign_in: ^5.1.0
   provider: ^6.0.1
+  lottie: any
   fluttertoast: ^8.0.7
   font_awesome_flutter: ^9.1.0
   url_launcher: ^6.0.7
